<resources>
    <string name="app_name">Wego</string>
    <string name="firebase_url">https://pictograma-b8ac7.firebaseio.com</string>
    <string name="facebook_app_id">289545565182154</string>
    <string name="fb_login_protocol_scheme">fb289545565182154</string>
    <string name="help">Ayuda</string>
    <string name="config">Configuración</string>
    <string name="share">Compartir</string>
    <string name="terms">Terminos</string>
    <string name="condition">Condiciones</string>
    <string name="exit">Salir</string>
    <string name="face">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="login">Ingresar</string>
    <string name="registrese">Regístrese</string>
    <string name="login2">Ingresar</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="tour1">tour1</string>
    <string name="tour2">tour2</string>
    <string name="tour3">tour3</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="msg_exit">Esta seguro que desea salir ?</string>
    <string name="error_mail">Ingrese un Email Valido</string>
    <string name="permissions">La app necesita de permisos</string>
    <string name="user_create">Usuario creado \n Por Favor Valide su email</string>
    <string name="ok">Aceptar</string>
    <string name="error_user">Un usuario con este correo electrónico ya existe</string>
    <string name="recuperar">Recuperar Contraseña</string>
    <string name="restabler_msg">Esta opcion es solo para usuarios registrados via email !!!</string>
    <string name="cerrar">Cerrar</string>
    <string name="enviar">Enviar</string>
    <string name="auth">Cargando...</string>
    <string name="error_pass">Ingrese su Contraseña</string>
    <string name="error_login_pass">Contraseña Incorrecta</string>
    <string name="servicies">Seleccione el servicio que necesite</string>
    <string name="error_pass_debil">Contraseña demasiado debil</string>
    <string name="error_user_exite">Cuenta no existe, por favor regístrese</string>
    <string name="guardar">Guardar</string>
    <string name="identificacion">Identificación</string>
    <string name="nombre">Nombres</string>
    <string name="apellido">Apellidos</string>
    <string name="fecha">Fecha nacimiento</string>
    <string name="image">Seleccione Imagen</string>
    <string name="sd">Card</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_pass_lenght">Ingrese un contraseña de mas de 6 caracteres</string>
    <string name="error_imagen">Seleccione un imagen de perfil</string>
    <string name="error_nombres">Ingrese sus nombres</string>
    <string name="error_apellido">Ingrese sus apellidos</string>
    <string name="error_fecha">Ingrese su fecha nacimiento</string>
    <string name="error_identificacion">Ingrese su identificación</string>
    <string name="telefono">Telefono</string>
    <string name="error_telefono">Ingrese un número de telefono validado</string>
    <string name="tipo_identificacion">Tipo de Identificación</string>
    <string name="genero">Genero</string>
    <string name="estado_civil">Estado civil</string>
    <string name="ciudad">Ciudad</string>
    <string name="error_tipo_identificacion">Seleccione el tipo de identificación</string>
    <string name="error_genero">Seleccione el genero</string>
    <string name="error_estado_civil">Seleccione su estado civil</string>
    <string name="error_ciudad">Seleccione su ciudad</string>
    <string name="nueva_pass">Nueva contraseña</string>
    <string name="error_newpass">Ingrese la nueva contraseña minimo 6 caracteres</string>
    <string name="error_newpass_update">Contraseña incorrecta ingresela nuevamente</string>
    <string name="validate_num">Validando número telefonico...</string>
    <string name="error_change_email">Error al cambiar email</string>
    <string name="error_need_pass">Para cambiar el email necesita el password</string>
    <string name="update_email">Valide nuevamente su email</string>
    <string name="error_validate_num">Error al validar número</string>
    <string name="txtrespt">Responsabilidades del trabajador</string>
    <string name="txtrespc">Responsabilidades Cliente</string>
    <string name="obtener">Obtener</string>
    <string name="servicios">Servicios</string>
    <string name="servicios_det">Detalles del servicio</string>
    <string name="perfil">Perfil</string>
    <string name="horario">Horario de Visita</string>
    <string name="dia">Día de Vísita</string>
    <string name="hora">Hora de Vísita</string>
    <string name="continuar">Continuar</string>
    <string name="rango">Rango</string>
    <string name="ubicacion">Nombre Ubicación</string>
    <string name="contacto">Nombre Contacto</string>
    <string name="foto">Fotos</string>
    <string name="miservicio">Mis Servicios</string>
    <string name="miubicaciones">Mis Ubicaciones</string>
    <string name="micontactos">Mis Contactos</string>
    <string name="miubicacion">Buscar ubicación</string>
    <string name="gps">Por favor habilite el gps</string>
    <string name="error_location">Ubicación no encontrada</string>
    <string name="ubicacionvisita">Ubicación de la visita</string>
    <string name="edificio">Vives en un edificio?</string>
    <string name="piso">Piso</string>
    <string name="departamento"># Departamento</string>
    <string name="selectimagen">Seleccione imagenes</string>

    <string name="colorAccent">#FF5252</string>
    <string name="eliminar">Eliminar</string>
    <string name="principal">Principal</string>
    <string name="editar">Editar</string>
    <string name="save">Guardar</string>
    <string name="error_contacto_nombre">Ya existe un contacto con ese nombre</string>
    <string name="error_contacto_telefono">Ya existe un contacto con ese número</string>
    <string name="error_contacto_delete">Contacto no puede ser borrado porque es principal</string>
    <string name="error_ubicacion_delete">Ubicación no puede ser borrado porque es principal</string>
    <string name="nombre_contacto">Nombre</string>
    <string name="error_ubicacion_nombre">Ya existe un ubicación con ese nombre</string>
    <string name="nombre_ubicacion">Nombre</string>

    <string name="error_contacto_nombre2">Ingrese un nombre</string>
    <string name="error_contacto_telefono2">Ingrese un número de teléfono</string>
    <string name="error_ubicacion">Seleccione un ubicación valida</string>
    <string name="error_dia">Seleccione el dia</string>
    <string name="error_fecha_select">Seleccione una fecha mayor o igual a la actual</string>
    <string name="error_fecha_hora">No se puede escoger el servicio porque pasa el tiempo de servicio</string>
    <string name="select_location">Seleccione una localización o en su defecto ingrese una nueva </string>
    <string name="select_contacto">Seleccione un contacto o en su defecto ingrese uno nuevo </string>
    <string name="select_imagen">Por favor seleccione 2 imagenes</string>
    <string name="select_location2">Seleccione una localización</string>
    <string name="select_contacto2">Seleccione un contacto</string>
    <string name="complete_perfil">Por favor ingrese su número telefono</string>
    <string name="Text_Payment_to">Pago de servicio</string>
    <string name="gracias_pago">Gracias por su pago!!!</string>
    <string name="total">Total</string>
    <string name="pagar">Pagar</string>
    <string name="infor">Información</string>
    <string name="todas">Todas</string>
    <string name="pendientes">Pendientes</string>
    <string name="canceladas">Canceladas</string>
    <string name="proceso">En Proceso</string>
    <string name="terminadas">Terminadas</string>
    <string name="calificar">Calificar</string>
    <string name="detalle">Detalle</string>
    <string name="cancelarconsulta">Esta seguro que desea cancelar la orden ?</string>
    <string name="motivo">Motivo</string>
    <string name="motivo_ingrese">Error</string>
    <string name="califica">Califica tu servicio</string>
    <string name="puntual">Puntual</string>
    <string name="calidad">Calidad Servicio</string>
    <string name="rapidez">Rapidez</string>
    <string name="calificacion">Seleccione la califacion</string>
    <string name="servicio">Servicio</string>
    <string name="cliente">Cliente</string>
    <string name="fecha_orden">Fecha</string>
    <string name="costo">Costo</string>
    <string name="contacto_orden">Contacto</string>
    <string name="ubicacion_orden">Ubicación</string>
    <string name="pisp">Piso</string>
    <string name="motivo_orden">Ingrese el motivo de la cancelación</string>
    <string name="depar">Departamento</string>
    <string name="ejecutar_orden">Ejecutar</string>
    <string name="asignar_orden">Asignar</string>
    <string name="orden">Orden Servicio</string>
    <string name="asignar">Esta seguro que desea tomar esta orden ???</string>
    <string name="trabajador">Trabajador</string>

    <string name="default_notification_channel_id">1000005</string>
    <string name="api_maps">AIzaSyAL0XFEOH3H9SZ2nXE0Ot_ZZph7yaOBpzE</string>


</resources>
