<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIcons"
    tools:context=".activity.GetServicies2Activity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbaruser"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="TextView"
            tools:layout_editor_absoluteX="16dp" />


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtServicio"
        style="@style/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/horario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbaruser" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtServicio">

        <TextView
            android:id="@+id/txtDia"
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/dia" />

        <TextView
            android:id="@+id/txtRango"
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/rango" />

        <TextView
            android:id="@+id/txtTotal"
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/total"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLocation"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button2"
                android:drawableLeft="@drawable/ic_location3"
                android:drawableRight="@drawable/ic_arrow_right"
                android:text="@string/ubicacion" />

            <Button
                android:id="@+id/btnConctat"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button2"
                android:drawableLeft="@drawable/ic_assignment"
                android:drawableRight="@drawable/ic_arrow_right"
                android:text="@string/contacto" />

            <Button
                android:id="@+id/btnPhoto"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button2"
                android:drawableLeft="@drawable/ic_insert_photo"
                android:drawableRight="@drawable/ic_arrow_right"
                android:text="@string/foto" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btncontinuar"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:text="@string/pagar" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>